HelpSource/scdoc.css
/* ... */
a.menu-link:hover {
    text-decoration: none;
    color: #999;
}

#menubar .menuitem:first-child a {
    /* The cube logo is actually *under* the <a>, but it shows through so that it looks like it
    is part of the link. */
    padding-left: 2.5em;
}

#menubar .menuitem:first-child a:hover {
    /* Lighten the background image by adding a translucent white layer over it. */
    background-color: rgba(255, 255, 255, 0.2);
}

#menubar .menuitem:last-child {
    border-right: none;
}

a.menu-link.title {
    font-weight: bold;
}

#topdoctitle {
/*    font-weight: bold;*/
    font-style: italic;
/*    color: #fff;*/
    color: #444;
    cursor: pointer;
}

.submenu, #toc {
    margin-top: 0.5em;
    padding: 0.5em;
    position: absolute;
    display: none;
    background-color: #f9f9f9;
    border: thin solid #ddd;
}

.submenu a {
        position: relative;
        display: block;
        margin: 0;
/*      padding: 5px 10px;*/
        padding: 0.2em;
        width: auto;
        white-space: nowrap;
        text-align: left;
/*      text-decoration: none;*/
        color: #447;
        font-weight: bold;
}

.toc_search {
    margin-left: 10px;
    color: #999;
    font-size: 9pt;
}

.toc_search input {
    border: 1px solid #ddd;
}


.header {
  padding-bottom: 0.18em;
}

#label {
    color: #666;
    font-size: 0.9em;
}

#summary {
    font-weight: normal;
    font-size: 1.1em;
    font-style: italic;
    color: #444;
}
#related {
    font-weight: bold;
    margin-top: 0.5em;
}
#filename {
    word-break: break-all;
}
.headerimage {
    float: right;
    margin-right: 1ex;
}

#superclasses {
    font-size: 9pt;
    color: #444;
    font-weight: normal;
}

.extension-indicator-ctr {
    float: right;
    font-size: 12pt;
    padding: 0.4em 0.4em 0.2em 0.4em;
    background-color: #601c8b;
    color: white;
    border-radius: 3px;
    border-bottom: 2px solid #39174F;
}

.extension-indicator-icon {
    height: 1em;
    margin-right: 0.5em;
}

.extension-indicator-text {
    line-height: 1em;
}

.subheader {
    font-size: 9pt;
    color: #444;
    margin-top: 1em;
}

.jump {
    text-align: right;
    font-size: 9pt;
    color: #555;
}
.jump a {
    font-weight: bold;
    padding-top:0;
    margin-top:0;
}

a.footnote {
    font-size: 9pt;
    top: -0.1em;
}
div.footnotes {
    border-top: 1px solid #aaa;
    margin-left: 2em;
    margin-top: 3em;
    margin-right: 2em;
}
div.footnote {
    margin-bottom: 0.5em;
    margin-top: 0.5em;
    font-size: 9pt;
}

.soft {
    color: #777;
}

h1 {
    margin: 0.1em 0;
    font-size: 2.6em;
    margin-bottom: 0em;
}

h2 {
    border-bottom: 1px solid #ddd;
    margin-top: 1.0em;
    text-align: left;
    margin-bottom: 2px;
    font-size: 1.6em;
}

h3 {
    margin-top: 2.0em;
    margin-bottom: 1px;
    text-align: left;
    font-size: 1.4em;
}

h4 {
    margin-top: 1em;
    margin-bottom: 0em;
    margin-left: 0em;
    color: #777;
}

/* http://nicolasgallagher.com/jump-links-and-viewport-positioning/demo/#method-C */
.anchor {
    margin-top: -3em !important;
    padding-top: 3em !important;
}

dt {
    font-weight: bold;
}
dd {
    margin-top: 0.25em;
    margin-bottom: 1.25em;
}

code, pre {
    font-family: monospace;
    font-size: 9pt;
}

pre {
    border-left: 2px solid #e0e0e0;
    padding-left: 1em;
}

code.code, pre.code {
}

pre.code {

}

.image {
    text-align: center;
    margin: 2em;
    font-size: 9pt;
}

.image img {
    margin-bottom: 1em;
}

.methprefix {
    font-weight: normal;
    color: #777;
    padding-right: 0.5em;
    margin-left: -1em;
}

.method-code {
    font-family: monospace;
    font-weight: normal;
    font-size: 1.05em !important;
    margin-bottom: 0em;
    margin-top: 0.75em;
    padding: 0.25em;
    border: none;
    padding-left: 4em;
    text-indent: -4em;
}

a.method-name {
    color: black;
    font-weight: bold;
}

.method {
    margin-left: 2em;
    margin-bottom: 2em;
}

.argstr {
    white-space: nowrap;
}

.extmethod {
    font-size: 9pt;
    color: #444;
    padding-left: 0.2em;
}

.supmethod {
    font-size: 9pt;
    color: #444;
    padding-left: 0.2em;
}

table.arguments {
    margin-left: 1.5em;
    margin-bottom: 0em;
    margin-top: 0.5em;
    border-collapse: collapse;
}

table.arguments td.argumentname, td.argumentdesc {
    vertical-align: top;
    border: none;
    padding-top: 0.2em;
    padding-bottom: 0.2em;
}

td.argumentname {
    font-weight: bold;
}

div.returnvalue {
    margin-left: 2em;
}

td p {
    margin-top: 0em;
}

.note, .warning {
/*    border-left: 4px solid #eea;*/
    background: #f7f7d7;
    padding: 0.5em;
    margin-top: 1em;
    margin-bottom: 1em;
}
.notelabel, .warninglabel {
    font-weight: bold;
}
.warninglabel {
    color: red;
}

/*.version {
    font-size: 9pt;
    border-top: 1px solid #bbb;
    color: #999;
    text-align: right;
    margin-top: 2em;
}*/

.doclink {
    font-size: 9pt;
    color: #888;
    text-align: right;
    margin-top: 2em;
    margin-bottom: 2em;
    border-top: 1px solid #ddd;
}
.doclink a {
    color: #444;
}

#sidetoc {
    position: fixed;
    display: block;
    width: 18em;
    left: 0px;
    margin: 0;
    padding: 10px;
    height: 100%;
    overflow: auto;
/*    background: #eee;*/
    background: #fff;
    border-right: 1px solid #bbb;
}

#sidetoc a:hover {
    text-decoration: none;
    color: black;
}

#toc-container {
    float: right;
}

#toc {
    width: 20em;
    max-height: 90vh;
    overflow: auto;
    right: 0;
    line-height: 130%;
}
#toctitle {
    font-weight: bold;
    font-size: 120%;
    margin: 0.7em 0.5em;
    color: #333;
}

li {
    padding-bottom: 0.5em;
}

ul.toc {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
ul.toc ul {
    margin-left: 1em;
}
ul.toc li {
    margin: 0;
    padding: 0;
}

ul.toc li a {
    display: block;
    padding: 0 8px 0 8px;
}

ul.toc li a:hover {
    background: #eee;
}

.toc1 {
    font-weight: bold;
}
.toc1 a {
    color: #444;
}
/* ... */

